--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Core components for CLARIN metadata
-description: An initiative by the CMDI task force aimed to making it easier to produce high quality metadata with enhanced interoperability within CLARIN
+description: An initiative by the CMDI task force aimed at making it easier to produce high quality metadata with enhanced interoperability within CLARIN
